# FastDistribution

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  PLAN.md  README.md  certificate.crt
.github/: CODEOWNERS
.github/workflows/: build-static.yml
crates/client/: Cargo.toml
crates/client/src/: app.rs  checksum.rs  cli.rs  http_client.rs  main.rs  progress.rs  torrent.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  models.rs  time.rs
crates/core/tests/: serde_roundtrip.rs
crates/server/: Cargo.toml
crates/server/assets/: add.html  added.html  monitor.html
crates/server/src/: app.rs  cli.rs  main.rs  routes.rs  state.rs  tls.rs
