[package]
name = "fast_distribution_client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
fast_distribution_core = { path = "../core" }
librqbit = "8.1.1"
sha2 = "0.10"



