[package]
name = "fast_distribution_server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
fast_distribution_core = { path = "../core" }



