[package]
name = "fast_distribution_server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tower-http = { version = "0.6.10", features = ["trace"] }
fast_distribution_core = { path = "../core" }
